RESOLVED FIXED133465
REGRESSION (iOS WebKit2): Single tap in pages with focus on load will clear the selection after the keyboard appears
https://bugs.webkit.org/show_bug.cgi?id=133465
Summary REGRESSION (iOS WebKit2): Single tap in pages with focus on load will clear t...
Enrica Casucci
Reported 2014-06-02 18:03:49 PDT
On iOS if a page focuses an input field on load we don't bring the keyboard on screen. Keyboard is only shown when the user interacts with the page. Still the WebProcess sets the focus and the selection according to the rules. We need to make sure the UI process doesn't accidentally clear this selection when the user starts the interaction with the page. <rdar://problem/17059189>
Attachments
Patch (3.44 KB, patch)
2014-06-02 18:09 PDT, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-06-02 18:09:47 PDT
Enrica Casucci
Comment 2 2014-06-02 18:26:57 PDT
Committed revision 169553.
Note You need to log in before you can comment on or make changes to this bug.